--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">About Us</a></li>
+                <li><a href="#">About Us</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Setting</a></li>
                 <li><a href="#">Contact</a></li>
