Errors-fixed, New Pages Added, Assets Added

--- a/index.html
+++ b/index.html
@@ -4,45 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-Ingoude Company</title>
+    <title>Home – Ingoude Company</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home-page">
 
     <header class="navbar">
         <div class="logo">Ingoude Company</div>
 
         <nav>
-            <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Setting</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul id="nav-menu">
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="setting.html">Setting</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <div class="search-box">
             <button class="search-btn">
-                <svg width="26" height="26" viewBox="0 0 24 24" fill="none"
-                     stroke="#e6d6c8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#e6d6c8" stroke-width="2.5"
+                    stroke-linecap="round" stroke-linejoin="round">
                     <circle cx="11" cy="11" r="7"></circle>
                     <line x1="16.5" y1="16.5" x2="21" y2="21"></line>
                 </svg>
             </button>
             <input type="text" placeholder="Search">
         </div>
+
+        <button class="mobile-menu-btn" id="mobile-menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
+
 
     <section class="hero">
         <h1 class="hero-title">INTERIOR DESIGN</h1>
 
         <div class="hero-container">
 
-           
+
             <div class="image-frame">
                 <img src="assets/left-main.PNG" alt="Interior Main Image">
             </div>
+
 
             <div class="content-box">
 
@@ -69,6 +77,8 @@
         </div>
 
     </section>
+
+    <script src="script.js"></script>
 
 </body>
 
